// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`timeline/TrackContextMenu when a global track is right clicked matches the snapshot of a global non-process track 1`] = `
<nav
  class="react-contextmenu timelineTrackContextMenu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide other Screenshots tracks
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide “⁨Screenshots⁩”
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide all tracks of type “⁨screenshots⁩”
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
    role="menuitemcheckbox"
    tabindex="-1"
    title="Screenshots"
  >
    <span>
      Screenshots
    </span>
    <span
      class="timelineTrackContextMenuSpacer"
    />
  </div>
</nav>
`;

exports[`timeline/TrackContextMenu when a global track is right clicked matches the snapshot of a global track 1`] = `
<nav
  class="react-contextmenu timelineTrackContextMenu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show “⁨Content Process⁩”
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show this process
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide “⁨Content Process⁩”
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-disabled="true"
    class="react-contextmenu-item react-contextmenu-item--disabled"
    role="menuitem"
    tabindex="-1"
  >
    Show all tracks in this process
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
    role="menuitemcheckbox"
    tabindex="-1"
    title="Content Process (Process ID: 222)"
  >
    <span>
      Content Process
    </span>
    <span
      class="timelineTrackContextMenuSpacer"
    />
    <span
      class="timelineTrackContextMenuPid"
    >
      (
      222
      )
    </span>
  </div>
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item checkable indented checked"
    role="menuitemcheckbox"
    tabindex="-1"
  >
    DOM Worker
  </div>
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item checkable indented checked"
    role="menuitemcheckbox"
    tabindex="-1"
  >
    Style
  </div>
</nav>
`;

exports[`timeline/TrackContextMenu when a global track is right clicked network track will be displayed when a number is not set for ctxId 1`] = `
<nav
  class="react-contextmenu timelineTrackContextMenu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide “⁨Process 0⁩”
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-disabled="true"
    class="react-contextmenu-item react-contextmenu-item--disabled"
    role="menuitem"
    tabindex="-1"
  >
    Show all tracks in this process
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
    role="menuitemcheckbox"
    tabindex="-1"
    title="Process 0 (Process ID: 0)"
  >
    <span>
      Process 0
    </span>
    <span
      class="timelineTrackContextMenuSpacer"
    />
    <span
      class="timelineTrackContextMenuPid"
    >
      (
      0
      )
    </span>
  </div>
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item checkable indented checked"
    role="menuitemcheckbox"
    tabindex="-1"
  >
    Network
  </div>
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item checkable indented checked"
    role="menuitemcheckbox"
    tabindex="-1"
  >
    Empty
  </div>
</nav>
`;

exports[`timeline/TrackContextMenu when a local track is right clicked matches the snapshot of a local track 1`] = `
<nav
  class="react-contextmenu timelineTrackContextMenu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show “⁨DOM Worker⁩”
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide “⁨DOM Worker⁩”
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-disabled="true"
    class="react-contextmenu-item react-contextmenu-item--disabled"
    role="menuitem"
    tabindex="-1"
  >
    Show all tracks in this process
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
    role="menuitemcheckbox"
    tabindex="-1"
    title="Content Process (Process ID: 222)"
  >
    <span>
      Content Process
    </span>
    <span
      class="timelineTrackContextMenuSpacer"
    />
    <span
      class="timelineTrackContextMenuPid"
    >
      (
      222
      )
    </span>
  </div>
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item checkable indented checked"
    role="menuitemcheckbox"
    tabindex="-1"
  >
    DOM Worker
  </div>
  <div
    aria-checked="true"
    aria-disabled="false"
    class="react-contextmenu-item checkable indented checked"
    role="menuitemcheckbox"
    tabindex="-1"
  >
    Style
  </div>
</nav>
`;
